// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`justifySelf renders 0 1`] = `
Array [
  .c0 {
  justify-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders function 1`] = `
Array [
  .c0 {
  justify-self: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: has;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: has;
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders invalid theme path 1`] = `
Array [
  .c0 {
  justify-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders negative number 1`] = `
Array [
  .c0 {
  justify-self: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    justify-self: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    justify-self: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    justify-self: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    justify-self: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    justify-self: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    justify-self: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    justify-self: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    justify-self: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    justify-self: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    justify-self: July;
  }
}

@media April {
  .c0 {
    justify-self: August;
  }
}

@media January {
  .c0 {
    justify-self: September;
  }
}

@media April {
  .c0 {
    justify-self: November;
  }
}

@media June {
  .c0 {
    justify-self: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    justify-self: July;
  }
}

@media April {
  .c0 {
    justify-self: August;
  }
}

@media January {
  .c0 {
    justify-self: September;
  }
}

@media April {
  .c0 {
    justify-self: November;
  }
}

@media June {
  .c0 {
    justify-self: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    justify-self: January;
  }
}

@media April {
  .c0 {
    justify-self: December;
  }
}

@media January {
  .c0 {
    justify-self: April;
  }
}

@media April {
  .c0 {
    justify-self: May;
  }
}

@media June {
  .c0 {
    justify-self: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    justify-self: January;
  }
}

@media April {
  .c0 {
    justify-self: December;
  }
}

@media January {
  .c0 {
    justify-self: April;
  }
}

@media April {
  .c0 {
    justify-self: May;
  }
}

@media June {
  .c0 {
    justify-self: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders postitive number 1`] = `
Array [
  .c0 {
  justify-self: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders string 1`] = `
Array [
  .c0 {
  justify-self: July;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: July;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: June;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: June;
}

<div
    className="c0"
  />,
]
`;

exports[`justifySelf renders valid theme path 1`] = `
Array [
  .c0 {
  justify-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  justify-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
